[package]
name = "colored_json"
version = "2.0.0"
edition = "2018"
authors = ["Jens Reimann <jreimann@redhat.com>", "Harald Hoyer <harald@redhat.com>"]
description = "Colorize JSON, for printing it out on the command line"

homepage = "https://github.com/ctron/colored_json"
repository = "https://github.com/ctron/colored_json"
documentation = "https://docs.rs/colored_json"
readme = "CRATE-README.md"
exclude = [ "Screenshot.png" ]

keywords = ["json", "colored", "coloured", "color", "colour"]
categories = ["command-line-interface", "encoding", "visualization"]
license = "EPL-2.0"

[badges]
travis-ci = { repository = "ctron/colored_json", branch = "master" }

[dependencies]
serde = "1"
serde_json = "1"
ansi_term = "0.11"
atty = "0.2"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }
