[package]
name = "colored_json"
version = "3.1.0"
edition = "2018"
authors = ["Jens Reimann <jreimann@redhat.com>", "Harald Hoyer <harald@redhat.com>"]
description = "Colorize JSON, for printing it out on the command line"

homepage = "https://github.com/ctron/colored_json"
repository = "https://github.com/ctron/colored_json"
documentation = "https://docs.rs/colored_json"
readme = "README.md"
exclude = [ "Screenshot.png" ]

keywords = ["json", "colored", "coloured", "color", "colour"]
categories = ["command-line-interface", "encoding", "visualization"]
license = "EPL-2.0"

[dependencies]
is-terminal = "0.4.4"
serde = "1"
serde_json = "1"
yansi = "0.5"
