[package]
name = "colored_json"
version = "4.1.0"
edition = "2021"
authors = ["Jens Reimann <jreimann@redhat.com>", "Harald Hoyer <harald@redhat.com>"]
description = "Colorize JSON, for printing it out on the command line"
rust-version = "1.70.0"

homepage = "https://github.com/ctron/colored_json"
repository = "https://github.com/ctron/colored_json"
documentation = "https://docs.rs/colored_json"
readme = "README.md"
exclude = [ "Screenshot.png" ]

keywords = ["json", "colored", "coloured", "color", "colour"]
categories = ["command-line-interface", "encoding", "visualization"]
license = "EPL-2.0"

[dependencies]
serde = "1"
serde_json = "1"
yansi = "0.5"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
